# clixbee_test_task

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
ad_exchange_auction/: app.py  logging_config.py  redis_client.py  settings.py
ad_exchange_auction/core/: auction.py  models.py  rate_limiter.py  repository.py  statistics.py
